# lumbra

./: .gitignore  .swiftlint.yml  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
Lumbra/: AGENTS.md  CLAUDE.md  GameModels.swift  LocalServer.swift  LumbraApp.swift  LumbraPanel.swift  LumbraViewModel.swift  MainWindowView.swift  RPGViews.swift  RPGViewsExtras.swift  Theme.swift
Lumbra.xcodeproj/: project.pbxproj
agent/: AGENTS.md  CLAUDE.md  TODOS.md  ai_brain.py  combat.py  config_loader.py  economy.py  game_config.json  game_state.py  main.py  npc_autonomy.py  player_intent.py  pyproject.toml  savegame.json  test_economy.py  world.py
