[project]
name = "lumbra-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.46.0",
    "torch>=2.1.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "basedpyright>=1.29.0",
    "pytest>=8.0.0",
]

[project.scripts]
lumbra-agent = "main:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
